[tool.poetry]
name = "TikTok.py"
version = "0.0.6"
description = ""
authors = ["MehdiRtal <mehdirtal7@pm.me>"]
packages = [{include = "tiktok_py"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.41.2"
fake-useragent = "^1.4.0"
playwright-stealth = "^1.0.6"
omocaptcha-py = {git = "https://github.com/MehdiRtal/OMOCaptcha.py.git"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
