[project]
name = "tiktok-py"
version = "0.0.11"
authors = [
    { name = "MehdiRtal", email = "mehdirtal7@pm.me" }
]
dependencies = [
    "playwright>=1.42.0",
    "fake-useragent>=1.5.1",
    "playwright-stealth>=1.0.6",
    "requests>=2.31.0",
    "omocaptcha-py @ git+https://github.com/MehdiRtal/OMOCaptcha.py.git",
    "setuptools>=69.2.0",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tiktok_py"]
